fix the double quote parsing

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,8 +1,3 @@
-# add_executable (test_environ test_environ.c)
-# target_link_libraries (test_environ PRIVATE libs)
-# target_include_directories(test_environ PRIVATE ${PROJECT_SOURCE_DIR})
-# add_test (NAME test_environ COMMAND test_environ)
-
 function(create_test target)
     message(STATUS "Creating test: ${target}")
     add_executable(${target} "${target}.c")
@@ -11,7 +6,9 @@ function(create_test target)
     add_test(NAME ${target} COMMAND ${target})
 endfunction()
 
-create_test(test_environ)
-create_test(test_brace_expansion)
-create_test(test_glob)
+file(GLOB TEST_SOURCES "*.c")
+foreach(test_file ${TEST_SOURCES})
+    get_filename_component(test_name ${test_file} NAME_WE)
+    create_test(${test_name})
+endforeach()
 
